--- a/pacman/misc/mainwindow.ui
+++ b/pacman/misc/mainwindow.ui
@@ -120,7 +120,7 @@
      <rect>
       <x>110</x>
       <y>170</y>
-      <width>191</width>
+      <width>141</width>
       <height>22</height>
      </rect>
     </property>
@@ -146,7 +146,7 @@
      <rect>
       <x>110</x>
       <y>220</y>
-      <width>191</width>
+      <width>141</width>
       <height>22</height>
      </rect>
     </property>
@@ -165,6 +165,26 @@
     </property>
     <property name="text">
      <string>RUN</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="sb_feed_density">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>170</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="sb_pacman_speed">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>220</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
     </property>
    </widget>
   </widget>
